cors configuration changes